Fix extension execution